--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "react": "^18.2.0",
     "react-brackets": "^0.4.7",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-scripts": "^5.0.1",
+    "save": "^2.9.0",
     "tailwindcss": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
