--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "firebase": "^10.12.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-brackets": "^0.4.7",
