--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-tailwind/react": "^2.1.9",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/react-router-dom": "^5.3.3",
-    "autoprefixer": "^10.4.19",
-    "axios": "^1.6.8",
-    "firebase": "^10.12.0",
-    "postcss": "^8.4.38",
-    "react": "^18.2.0",
-    "react-brackets": "^0.4.7",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.0",
-    "react-scripts": "^5.0.1",
-    "semver": "^7.6.2",
-    "tailwind": "^4.0.0",
-    "tailwindcss": "^3.4.3",
-    "web-vitals": "^2.1.4"
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "express": "^4.19.2",
+    "postcss": "^8.4.42",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "tailwindcss": "^3.4.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,8 +36,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "typescript": "^5.4.5"
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "typescript": "^5.5.4"
   }
 }
