--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "express": "^4.19.2",
+    "firebase": "^10.13.1",
     "postcss": "^8.4.42",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^6.26.1",
     "tailwindcss": "^3.4.10"
   },
   "scripts": {
