--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.13.1",
     "postcss": "^8.4.42",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^22.5.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "typescript": "^5.5.4"
