--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.7",
     "express": "^4.19.2",
     "firebase": "^10.13.1",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -27,8 +29,6 @@
     "dotenv": "^16.4.5",
     "eslint": "^9.11.1",
     "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
