--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,18 +13,18 @@
     "axios": "^1.7.7",
     "express": "^4.19.2",
     "firebase": "^10.13.1",
+    "history": "^5.3.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
