--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -17,7 +17,7 @@
     /* Linting */
     "strict": false,
     "noUnusedLocals": false,
-    "noUnusedParameters": false
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
